src/test/resources/lox/error/result_early_return_not_result.lox
fun foo() {
    return "test";
}

fun bar() {
    foo()!?;
}

bar(); // expect runtime error: !? operator can only be used with functions that return 'Result'.